# udpih

./: .gitignore  Dockerfile  Makefile  README.md
.github/workflows/: build.yml
arm_kernel/: Makefile  imports.ld  link.ld
arm_kernel/source/: fsa.c  fsa.h  imports.h  main.c  recovery_loader.c  recovery_loader.h
arm_user/: Makefile  imports.ld  link.ld
arm_user/source/: crt0.s  imports.h  main.c  types.h
common/: common.h  data-0x102ad880-full-speed.inc  data-0x102ad880.inc  device.c  types.h
common/usb/: ch9.h
docs/: setup-esp32.md  setup-linux.md  setup-pico.md
esp32/: .gitignore  CMakeLists.txt  sdkconfig.defaults
esp32/main/: CMakeLists.txt  Kconfig.projbuild  main.c  usb_esp32sx.c  usb_esp32sx.h
linux/: Makefile  main.c  main.h  utils.c
pico/: CMakeLists.txt  Makefile  main.c  usb.c  usb.h
